# solhell-launcher

./: .gitignore  MORALIS_SETUP.md  Makefile  README.md  data.env  env.example  package-lock.json  package.json  system-flow.md
scripts/: create-defla-token.js  create-hell-simple.js  deploy.sh  example-token-config.json  hell-token-info.json  launch-deflationary-token.js  package-lock.json  package.json  transfer-hell.js  verify-hell-token.js
solana-program/: Anchor.toml  Cargo.toml  airdrop-example-structure.rs
solana-program/programs/defla-staking/: Cargo.toml
solana-program/programs/defla-staking/src/: lib.rs
solana-program/programs/deflationary-token/: Cargo.toml
solana-program/programs/deflationary-token/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CommunityGrid.tsx  CreateTokenForm.tsx  EmberBackground.tsx  FloatingFooter.tsx  Navigation.tsx  PumpFunLauncher.tsx  RitualLogs.tsx  Search.tsx  SimpleTradingPanel.tsx  Stats.tsx  TokenChart.tsx  WalletButton.tsx
src/config/: constants.ts
src/contexts/: WalletContextProvider.tsx
src/hooks/: useBondingCurve.ts  useDeflaToken.ts  useHellToken.ts  useMarketData.ts  usePumpFunLauncher.ts  useSimpleTrading.ts  useStaking.ts  useTokenLauncher.ts  useTrading.ts  useUnifiedLauncher.ts
src/services/: bondingCurveService.ts  jupiterService.ts  moralisService.ts  pumpfunLauncher.ts  solanaTokenService.ts  tokenRegistry.ts  unifiedLauncher.ts
src/types/: index.ts  market.ts  tradingview.ts
src/utils/: loadTVLibrary.ts  mockCandle.ts  tradingViewDatafeed.ts
(+17 files in other folders)
