[package]
name = "hell-staking"
version = "0.1.0"
description = "HELL Token Staking Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "defla_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
