[package]
name = "deflationary-token"
version = "0.1.0"
description = "Deflationary Token Creation and Management Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "deflationary_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
mpl-token-metadata = "4.1.2"
